Reimplement !1894, handling the hanging of white-spaces.

Original implementation by Alvin Wong,
implemented according to css-text-3 section 4.1.2 point 4:
https://www.w3.org/TR/css-text-3/#white-space-phase-2

BUG:472829